crates/data-plane-controller/src/shared/snapshots/data_plane_controller__shared__stack__test__simulate_multi_az_etcd_releases.snap
---
source: crates/data-plane-controller/src/shared/stack.rs
expression: "&simulate_rollout(&mut stack.config.model, releases)"
---
[
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 0,
      "current": 1,
      "rollout": {
        "target": 0,
        "step": -1
      },
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 0,
      "current": 0,
      "rollout": {
        "target": 1,
        "step": -1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 0,
      "rollout": {
        "target": 1,
        "step": -1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 0,
      "current": 1,
      "rollout": {
        "target": 0,
        "step": -1
      },
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 0,
      "current": 0,
      "rollout": {
        "target": 1,
        "step": -1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 0,
      "rollout": {
        "target": 1,
        "step": -1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:v3.5.17",
      "desired": 0,
      "current": 1,
      "rollout": {
        "target": 0,
        "step": -1
      },
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 0,
      "current": 0,
      "rollout": {
        "target": 1,
        "step": -1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 0,
      "rollout": {
        "target": 1,
        "step": -1
      },
      "tier": 50
    }
  ],
  [
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "a"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "b"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    },
    {
      "role": "etcd",
      "template": {
        "ami_image_id": "ami-01a8b7cc84780badb",
        "instance_type": "m5d.large",
        "provider": "aws",
        "region": "us-west-2",
        "zone": "c"
      },
      "oci_image": "quay.io/coreos/etcd:next",
      "desired": 1,
      "current": 1,
      "tier": 50
    }
  ]
]
